# imperial-press

./: .env.example  .gitignore  CLAUDE.md  Journal Catagory.txt  README.md
.claude/: launch.json
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: auth.py
backend/app/core/: config.py  database.py  dependencies.py  exceptions.py  security.py
backend/app/modules/certificates/: generator.py  models.py  repository.py  schemas.py  service.py
backend/app/modules/content/: models.py  repository.py  schemas.py  service.py
backend/app/modules/journals/: models.py  repository.py  schemas.py  service.py
backend/app/modules/notifications/: email.py  models.py  repository.py  schemas.py  service.py
backend/app/modules/papers/: models.py  repository.py  schemas.py  service.py
backend/app/modules/payments/: models.py  repository.py  schemas.py  service.py
backend/app/modules/reviews/: models.py  repository.py  schemas.py  service.py
backend/app/modules/search/: client.py  schemas.py  service.py
backend/app/modules/stats/: schemas.py  service.py
backend/app/modules/submissions/: models.py  repository.py  schemas.py  service.py
backend/app/modules/users/: models.py  repository.py  schemas.py  service.py
backend/app/utils/: files.py  pagination.py  storage.py  text.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth.py
backend/tests/unit/: test_schemas.py  test_security.py  test_utils.py
docs/: business_requirements.md  (+1 more)
(+124 files in other folders)
